# londri-backend

./: .env.example  .gitignore  Makefile  README.md  TODO.md  alembic.ini  main.py  pyproject.toml  reconcile_londri_txns.py  renew_subscriptions.py  run.sh
alembic/: env.py
alembic/versions/: 20260701_2e05ecf9457d_create_users_and_otp_tables.py  20260702_53935bda36b5_create_business_kyc_and_kyb_tables.py  20260703_dcf25f055e40_add_bank_accounts_and_business_.py  20260704_213b6f55906e_revamp_to_kyb_and_business_tables.py  20260704_49e79d383f04_category_price_list_and_subscription_.py  20260704_929fd0d4d221_revamp_to_kyb_table.py  20260706_17acbf8ed39d_add_account_name_to_business_.py  20260706_331cbd758356_orders_transactions_order_items_and_.py  20260706_5a1c74d617ba_tokenized_card_table.py  20260706_5cf6aa6412c9_token_card_table.py  20260706_c41bd605362c_customer_subscription_table.py  20260707_46ad6508b672_profile_image_to_users.py
app/: __init__.py
app/api/: dependencies.py
app/core/: config.py  exceptions.py  security.py  session.py
app/models/: __init__.py  accounts.py  base.py  business.py  catalog.py  compliance.py  order.py  subscription.py  transaction.py  user.py
app/repositories/: accounts_repository.py  base.py  business_repository.py  catalog_repository.py  compliance_repository.py  order_repository.py  subscription_repository.py  transaction_repository.py  user_repository.py
app/services/: auth.py  business.py  catalog.py  dependencies.py  mail.py  order.py  payment.py  subscription.py  webhook.py  (+2 more)
templates/: email.html  email_template.html
(+30 files in other folders)
