[project]
name = "londri_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.5",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.1",
    "asyncpg==0.31.0",
    "bcrypt==4.0.1",
    "cffi==2.0.0",
    "click==8.4.2",
    "cryptography==49.0.0",
    "dnspython==2.8.0",
    "ecdsa==0.19.2",
    "email-validator==2.3.0",
    "fastapi[standard]==0.138.2",
    "fastapi-mail>=1.6.5",
    "geoalchemy2==0.20.0",
    "geopy>=2.4.1",
    "greenlet>=3.5.3",
    "h11==0.16.0",
    "httptools==0.8.0",
    "idna==3.18",
    "mako==1.3.12",
    "markupsafe==3.0.3",
    "opencage>=3.4.0",
    "packaging==26.2",
    "passlib>=1.7.4",
    "psycopg2-binary==2.9.12",
    "pyasn1==0.6.3",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "pyyaml==6.0.3",
    "redis==8.0.1",
    "rsa==4.9.1",
    "six==1.17.0",
    "sqlalchemy==2.0.51",
    "starlette==1.3.1",
    "twilio>=9.10.9",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.49.0",
    "uvloop==0.22.1",
    "watchfiles==1.2.0",
    "websockets==16.0",
    "shapely>=2.1.2",
]
